first commit of today's notes

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[This is the requests library](https://github.com/kennethreitz/requests)"
+   ]
   }
  ],
  "metadata": {
