no ipnyb checkpoints

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[This is the requests library](https://github.com/kennethreitz/requests)"
+    "[This is the requests library](https://github.com/kennethreitz/requests)\n",
+    "\n"
    ]
   }
  ],
