pushing a first readable notebook

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -14,8 +14,22 @@
    "metadata": {},
    "source": [
     "[This is the requests library](https://github.com/kennethreitz/requests)\n",
-    "\n"
+    "\n",
+    "Why does code get messy?\n",
+    "* \"You end up with a function where the only defined behavior is ... well it does whatever it does now, so let's not mess with it\"\n",
+    "* \"When it works, we don't think about it\"\n",
+    "* Pragmatism\n",
+    "* The quick hacky fix is never temporary."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
