first talk notes

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10:50 AM Requests under the hood\n",
+    "# 10:50 AM: Requests under the hood\n",
     "\n",
-    "[Cory Benfield](lukasa.co.uk)"
+    "[Cory Benfield](https://lukasa.co.uk)"
    ]
   },
   {
@@ -19,7 +19,20 @@
     "* \"You end up with a function where the only defined behavior is ... well it does whatever it does now, so let's not mess with it\"\n",
     "* \"When it works, we don't think about it\"\n",
     "* Pragmatism\n",
-    "* The quick hacky fix is never temporary."
+    "* The quick hacky fix is never temporary.\n",
+    "* Users don't complain about it\n",
+    "* Over time you enshrine every edge case ever into your code.\n",
+    "* Things are complex AND they evolve\n",
+    "\n",
+    "\n",
+    "**Hero-worship, while fine, is fundamentally predicated on a lie. Our heros are not dramatically better at writing better code than us**\n",
+    "\n",
+    "* Any non-trivial software is flawed.\n",
+    "* We need to not be afraid of our mistakes.\n",
+    "\n",
+    "Questions/Discussions:\n",
+    "* How do you balance the need to do things right with a need to immediately fix things?\n",
+    "  "
    ]
   },
   {
