--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -31,8 +31,115 @@
     "* We need to not be afraid of our mistakes.\n",
     "\n",
     "Questions/Discussions:\n",
-    "* How do you balance the need to do things right with a need to immediately fix things?\n",
-    "  "
+    "* How do you balance the need to do things right with a need to immediately fix things? At some point, the hacks are okay, but acknowledge that they are hacks.\n",
+    "* Is it possible to deossify a codebase? When the combined weight of all the historical decisions make it impossible to keep up, someone else will probably come up with something better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11:30 AM: Type uWSGI; Pres Enter; What Happens?\n",
+    "\n",
+    "[Asheesh Laroia](https://github.com/paulproteus); [Philip James](https://twitter.com/phildini)\n",
+    "\n",
+    "Previous talk: Type Python pres enter, what happens\n",
+    "\n",
+    "\n",
+    "[Youtube link](https://www.youtube.com/watch?v=XVhSjZYwZJo)\n",
+    "\n",
+    "[Slides](https://speakerdeck.com/phildini/type-python-press-enter-what-happens-pydx-2015)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running UWSGI\n",
+    "\n",
+    "```bash \n",
+    "uwsgi --master --http :8000 --module catserve.wsgi \n",
+    "```\n",
+    "\n",
+    "**How does uWSGI handle processes?**\n",
+    "\n",
+    "* WSGI is a synchronous protocol\n",
+    "\n",
+    "To un-ruin the service, run two worker processes, and there are now 2 uWSGI workers.\n",
+    "```bash \n",
+    "uwsgi --master --http :8000 --module catserve.wsgi -p 2\n",
+    "```\n",
+    "\n",
+    "**How does uWSGI handle networking?**\n",
+    "\n",
+    "* Userland communicates with the kernel through syscalls\n",
+    "\n",
+    "To connect to the uWSGI server?\n",
+    "1) uWSGI needs to issue the socket syscall to issue the socket that will connect to the port on the kernel\n",
+    "    * uWSGI is getting back a way of handling the socket\n",
+    "2) Bind connects the port to the socket\n",
+    "3) Listen() tells the kernel to expose the port and make it available for listening\n",
+    "4) This is when uWSGI spawns its workers. Keeps initial file descriptors. These worker processes issue epoll_wait() which tell the kernel that they are ready and waiting for any connections.\n",
+    "\n",
+    "So...when the browser opens the port:\n",
+    "* Both processes try to \"pick up the phone\"\n",
+    "* One wins, and handles the connection through a separate socket.\n",
+    "\n",
+    "**Why use uWSGI?**\n",
+    "* Graceful code reloading\n",
+    "* Tuneability\n",
+    "* Security\n",
+    "* Making config files\n",
+    "* Other features\n",
+    "\n",
+    "How does code reloading work?\n",
+    "\n",
+    "* With a new version of the code\n",
+    "* uWSGI sends sighup to the worker processes\n",
+    "* uWSGI tells anything not working to stop, and marks another one that it \"needs to exit\" after\n",
+    "* Always checks if it should exit before calling the epoll_wait()\n",
+    "* uWSGI erases its memory and creates a new process with the same pid and same socket, which never closes: thus can queue new code.\n",
+    "* Always waits for all worker processes to exit, and by default waits 60 seconds. You can make it reload worker processes one by one.\n",
+    "\n",
+    "**Making sure the resource usage meets your needs**\n",
+    "* The `-p` parameter lets you change the # of processes\n",
+    "\n",
+    "**Security**\n",
+    "\n",
+    "> \"Security is a word, that when you say it, everyone in the room feels inadequate\"\n",
+    "\n",
+    "```\n",
+    "GET / HTTP/1.1\n",
+    "HOST: catserve.io\n",
+    "```\n",
+    "vs. \n",
+    "```\n",
+    "GET / HTTP/1.1\n",
+    "HOST: catserve.io\n",
+    "HOST: catserve.biz\n",
+    "```\n",
+    "\n",
+    "* Interactions between the thing running your code and the rest of the stuff it runs could turn into security issues\n",
+    "\n",
+    "** Config Files **\n",
+    "\n",
+    "Translate the bash command from the beginning int:\n",
+    "```\n",
+    "[uwsgi]\n",
+    "master = 1\n",
+    "http = 8000\n",
+    "module = catserve.wsgi\n",
+    "processes = 2\n",
+    "```\n",
+    "\n",
+    "**Features**\n",
+    "* Static file serving (high performance implementation in C)\n",
+    "* Max requests per worker\n",
+    "* Queuing systems\n",
+    "* HTTPS support, HTTP2 support\n",
+    "* uwsgitop\n",
+    "* memory-report\n",
+    "* async"
    ]
   },
   {
