grokking the gil

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -143,6 +143,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12:10 PM Grokking the GIL: Write Fast and Thread Safe Python\n",
+    "[Jesse Jiryu Davis](https://twitter.com/jessejiryudavis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're going to look at Python 2.7 source code. \n",
+    "\n",
+    "['This is the GIL'](https://github.com/certik/python-2.7/blob/master/Python/ceval.c)\n",
+    "\n",
+    "GIL:\n",
+    "* Mutual exclusion lock\n",
+    "* Initialized at the beginning of interpreter start up\n",
+    "* The GIL is born locked by the main thread\n",
+    "* Mutex is a lock that threads have to hold whenever they are executing Python code\n",
+    "\n",
+    "> One thread runs Python, while N others sleep or await I/O.\n",
+    "\n",
+    "All of your threads can be doing other things. The only thing that two threads can't do at once in Python is run Python.\n",
+    "\n",
+    "> \"I like to think of my Python programs as an old mainframe computer.\"\n",
+    "\n",
+    "We want to know how to write fast and thread-safe python with CPython today?\n",
+    "\n",
+    "2 Kinds of Python multitasking\n",
+    "* Cooperative: voluntarily dropping the GIL while this thread does something else\n",
+    "* Preemptive: interpreter forces a thread to drop Python\n",
+    "    * Happens every 1K bytecodes in Python2.\n",
+    "    * Happens every 15 milliseconds.\n",
+    "    \n",
+    "    \n",
+    "**Cooperative**\n",
+    "    \n",
+    "`Py_BEGIN_ALLOW_THREADS`\n",
+    "   \n",
+    "[Socket Connection source code here](https://github.com/certik/python-2.7/blob/c360290c3c9e55fbd79d6ceacdfc7cd4f393c1eb/Modules/_multiprocessing/socket_connection.c)\n",
+    "```c\n",
+    "Py_BEGIN_ALLOW_THREADS\n",
+    "res = _conn_sendall(conn->handle, message, length+4);\n",
+    "Py_END_ALLOW_THREADS\n",
+    "```\n",
+    "\n",
+    "\n",
+    "**Preemptive**\n",
+    "\n",
+    "Two step Python execution:\n",
+    "* Python text compiled into bytecode\n",
+    "* Byteode interpreted by the interpreter, executes like a little VM according to the instructions in ceval.c\n",
+    "\n",
+    "[Back to ceval.c](https://github.com/certik/python-2.7/blob/master/Python/ceval.c)\n",
+    "\n",
+    "Debuggers register trace functions, which the interpreter executes every time it starts a function call. \n",
+    "` if (tstate->c_profilefunc != NULL)`\n",
+    "\n",
+    "This is where the GIL forces preemptive multithreading\n",
+    "> `/* Give another thread a chance */` \n",
+    "\n",
+    "**How do we use this to write fast code?**\n",
+    "\n",
+    "* Cooperative multitasking: finish jobs faster if jobs are to primarily await i/o.\n",
+    "* Preemptive multitasking: simulate parallelism.\n",
+    "\n",
+    "If there's a GIL, do we need to worry about thread safety?\n",
+    "\n",
+    "Unsafe:\n",
+    "```python\n",
+    "import threading, sys\n",
+    "sys.setcheckinterval(1)\n",
+    "\n",
+    "n=0\n",
+    "\n",
+    "def foo():\n",
+    "    global n\n",
+    "    n +=1\n",
+    "\n",
+    "threads = []\n",
+    "\n",
+    "for i in range(1000):\n",
+    "    t = threading.Thread(target=foo)\n",
+    "    threads.append(t)\n",
+    "\n",
+    "for t in threads:\n",
+    "    t.start()\n",
+    "\n",
+    "for t in threads:\n",
+    "    t.join()\n",
+    "\n",
+    "print(n)\n",
+    "```\n",
+    "\n",
+    "Sometimes returns 1000, sometimes returns 998.\n",
+    "\n",
+    "* Have to lock around shared mutable state\n",
+    "\n",
+    "**So how do we make code go fast?**\n",
+    "* Concurrency: when a job finishes faster by waiting for multiple i/o operations at the same time.\n",
+    "* Parallelism: when a job finishes faster when multiple threads do things at the same time.\n",
+    "    * Python threads can't do this\n",
+    "\n",
+    "\n",
+    "How to use threads to make a concurrent task go faster. For an i/o bound task, threads can be a good answer.\n",
+    "\n",
+    "How to use do parallelism despite the GIL.\n",
+    "* Proceses are completely distinct; they have independent GILs and can run simultaneously on multi-core laptops\n",
+    "    * Communication is a lot more complex\n",
+    "* Threads share memory\n",
+    "\n",
+    "[Article version of the talk with code](https://emptysqua.re/blog/series/grok-the-gil/)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
