--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -259,6 +259,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4:30 PM: The Glory of pdb's set_trace\n",
+    "\n",
+    "Nicole Zuckerman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Inspect variables in real-time\n",
+    "* Pretty print things and can see variables\n",
+    "* look at backtrace of current function\n",
+    "```\n",
+    "(pdb) bt\n",
+    "```\n",
+    "* Look at whatever variables are in that context\n",
+    "* Can move up or move down the call stack\n",
+    "* Traveling through execution.\n",
+    "* q doesn't cleanup\n",
+    "* `l` or `list` allows you to view 5 above and 5 below the lines you're on.\n",
+    "* Changing live code real-time \n",
+    "\n",
+    "\n",
+    "**Other debugging tools**\n",
+    "\n",
+    "Dunder dicts\n",
+    "`foo.__dict__`\n",
+    "\n",
+    "dir\n",
+    "`dir(obj)`\n",
+    "\n",
+    "**Pdb gotchas**\n",
+    "* Harder when code is not running in a place wiht a prompt (celery, cron job)\n",
+    "* Try not to name variables that would collide with a pdb command version\n",
+    "* `help` tells you what commands are available\n",
+    "* Hitting the \"enter\" key will reexecute a command like ```!!``` in bash\n",
+    "\n",
+    "**Post-moterm debugging**\n",
+    "* `pdm.pm` takes no arguments and will enter post-mortem debugging of the last traceback.\n",
+    "* But if you use pdb.post_morten you can trace it back to something\n",
+    "* Breakpoints are numbered or you can give it a file name before the line number\n",
+    "* Conditional breakpoints or setting breaks at particular functions.\n",
+    "* "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
