neural networks and music

--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -304,7 +304,54 @@
     "* But if you use pdb.post_morten you can trace it back to something\n",
     "* Breakpoints are numbered or you can give it a file name before the line number\n",
     "* Conditional breakpoints or setting breaks at particular functions.\n",
-    "* "
+    "* Can drop into a pdb if/when a test fails."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5:10 PM : Algorithmic Music Generation\n",
+    "Padmaja V Bhagwat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Steps to algorithmically generate music?\n",
+    "\n",
+    "1. Convert mp3 files to np-tensors\n",
+    "2. Train the model\n",
+    "3. Generate the music\n",
+    "\n",
+    "**To convert the mp3 files to np-tensors**\n",
+    "* Uncompress the music: mp3 to monaural WAV using LAME\n",
+    "* Divide into blocks of equal size by zero padding it\n",
+    "* Convert from time to frequency domain using discrete fourier transform\n",
+    "    * Use a RNN that remembers previous information\n",
+    "    * LSTM: remembering information for a longer period of time that is something that model does by default?\n",
+    "    \n",
+    "LSTM Steps\n",
+    "* Forget gate layer\n",
+    "* Input gate layer + tanh layer decides what to update\n",
+    "* Old cell state gets updated\n",
+    "* Sigmoid layer decides output\n",
+    "\n",
+    "Generating music\n",
+    "* Taking first chunk of training data as seed sequence\n",
+    "* Iteratively add sequences to the seed\n",
+    "\n",
+    "**Challenges**\n",
+    "* Data intensive\n",
+    "* Memory intensive (32 GiB of memory, 8vCPUs, EBS-only, 64 bit platform)\n",
+    "* 14 hours to do 2K iterations\n",
+    "\n",
+    "** Python libraries**\n",
+    "* LAME and SoX to convert mp3 files\n",
+    "* Numpy/Scipy\n",
+    "* Matplotlib\n",
+    "* Used Keras with Theano as backend\n"
    ]
   },
   {
