--- a/2017-05-19 PyCon Notes.ipynb
+++ b/2017-05-19 PyCon Notes.ipynb
@@ -312,7 +312,9 @@
    "metadata": {},
    "source": [
     "# 5:10 PM : Algorithmic Music Generation\n",
-    "Padmaja V Bhagwat"
+    "Padmaja V Bhagwat\n",
+    "\n",
+    "[Github](https://github.com/unnati-xyz/music-generation)"
    ]
   },
   {
