internals of python

--- a/2017-05-20 PyCon Notes.ipynb
+++ b/2017-05-20 PyCon Notes.ipynb
@@ -124,13 +124,308 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Snapshot management\n",
+    "* Debugging\n",
+    "* Can use for a halfway automated backup solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11:30 AM: When the abyss gazes back: staring down Python's surprising internals\n",
+    "\n",
+    "[David Wolever](https://twitter.com/wolever)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Motivation: odd behavior **\n",
+    "[Why is tuple membership faster than equality?](http://stackoverflow.com/questions/28885132/why-is-x-in-x-faster-than-x-x)\n",
+    "\n",
+    "ipython's timeit magic is wonderful.\n",
+    "\n",
+    "`%timeit`\n",
+    "\n",
+    "```python\n",
+    "dis.disassmble\n",
+    "```\n",
+    "Allows you to see the bytecode."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import dis\n",
+    "what = \"World\"\n",
+    "def say_hello1():\n",
+    "    msg = \"Hello, %s\" %(what,)\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4           0 LOAD_CONST               1 ('Hello, %s')\n",
+      "              3 LOAD_GLOBAL              0 (what)\n",
+      "              6 BUILD_TUPLE              1\n",
+      "              9 BINARY_MODULO\n",
+      "             10 STORE_FAST               0 (msg)\n",
+      "\n",
+      "  5          13 LOAD_GLOBAL              1 (print)\n",
+      "             16 LOAD_FAST                0 (msg)\n",
+      "             19 CALL_FUNCTION            1 (1 positional, 0 keyword pair)\n",
+      "             22 POP_TOP\n",
+      "             23 LOAD_CONST               0 (None)\n",
+      "             26 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.disassemble(say_hello1.__code__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'd\\x01\\x00t\\x00\\x00f\\x01\\x00\\x16}\\x00\\x00t\\x01\\x00|\\x00\\x00\\x83\\x01\\x00\\x01d\\x00\\x00S'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# full implementation of the function\n",
+    "say_hello.__code__.co_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# func_closure\n",
+    "def hello_closure(what):\n",
+    "    msg = \"Hello, %s\" %(what,)\n",
+    "    def hello_closure_inner():\n",
+    "        return msg\n",
+    "    return hello_closure_inner\n",
+    "\n",
+    "say_hello = hello_closure(\"World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, World'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<cell at 0x1061614c8: str object at 0x1061b20f0>,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello.__closure__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, World'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello.__closure__[0].cell_contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4           0 LOAD_CONST               1 ('Hello, %s')\n",
+      "              3 LOAD_GLOBAL              0 (what)\n",
+      "              6 BUILD_TUPLE              1\n",
+      "              9 BINARY_MODULO\n",
+      "             10 STORE_FAST               0 (msg)\n",
+      "\n",
+      "  5          13 LOAD_GLOBAL              1 (print)\n",
+      "             16 LOAD_FAST                0 (msg)\n",
+      "             19 CALL_FUNCTION            1 (1 positional, 0 keyword pair)\n",
+      "             22 POP_TOP\n",
+      "             23 LOAD_CONST               0 (None)\n",
+      "             26 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# back to this\n",
+    "# python overloads binary modulo operator to do string formatting\n",
+    "dis.disassemble(say_hello1.__code__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An aside: Stack Machines\n",
+    "* Easy to implement\n",
+    "* Easy to reason about\n",
+    "* Easy to optimize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def in_():\n",
+    "    return \"x\" in (\"x\", )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def eq():\n",
+    "    return \"x\" == \"x\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2           0 LOAD_CONST               1 ('x')\n",
+      "              3 LOAD_CONST               2 (('x',))\n",
+      "              6 COMPARE_OP               6 (in)\n",
+      "              9 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.disassemble(in_.__code__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  2           0 LOAD_CONST               1 ('x')\n",
+      "              3 LOAD_CONST               1 ('x')\n",
+      "              6 COMPARE_OP               2 (==)\n",
+      "              9 RETURN_VALUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis.disassemble(eq.__code__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the source code:\n",
+    "\n",
+    "[ceval.c](https://github.com/certik/python-2.7/blob/c360290c3c9e55fbd79d6ceacdfc7cd4f393c1eb/Python/ceval.c)\n",
+    "* This is where Python evaluation happens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's read through the switch.\n",
+    "\n",
+    "> Why does the old @property operator not work with old style classes\n",
+    "\n",
+    "[Blog post about string interning](http://guilload.com/python-string-interning/)\n",
+    "\n",
+    "> Why can you not override `__len__`?\n"
+   ]
   }
  ],
  "metadata": {
